acvm-repo/msgpack_tagged/tests/compile_fail/duplicate_via.stderr
error: duplicate `via(...)` modifier in `#[tagged(...)]`
  --> tests/compile_fail/duplicate_via.rs:19:22
   |
19 | #[tagged(via(WireA), via(WireB))] // duplicate `via(...)`
   |                      ^^^^^^^^^^
